card structure adde

--- a/index.html
+++ b/index.html
@@ -356,6 +356,41 @@
     </div>
     <div class="more-service-btn"><button>More Services</button></div>
     <!--Projects-->
+    <div class="container py-4">
+      <h4 class="mb-3">Project</h4>
+      <div class="scroll-container">
+        <button class="scroll-button scroll-left" onclick="scrollCards('left')">
+          &#8592;
+        </button>
+        <div class="scrolling-wrapper" id="cardContainer">
+          <div class="card card-custom">
+            <div class="card-body">Card 1</div>
+          </div>
+          <div class="card card-custom">
+            <div class="card-body">Card 2</div>
+          </div>
+          <div class="card card-custom">
+            <div class="card-body">Card 3</div>
+          </div>
+          <div class="card card-custom">
+            <div class="card-body">Card 4</div>
+          </div>
+          <div class="card card-custom">
+            <div class="card-body">Card 5</div>
+          </div>
+          <div class="card card-custom">
+            <div class="card-body">Card 6</div>
+          </div>
+        </div>
+        <button
+          class="scroll-button scroll-right"
+          onclick="scrollCards('right')"
+        >
+          &#8594;
+        </button>
+      </div>
+    </div>
+
     <div class="projects"></div>
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
