project content added

--- a/index.html
+++ b/index.html
@@ -364,8 +364,28 @@
         </button>
         <div class="scrolling-wrapper" id="cardContainer">
           <div class="card card-custom">
-            <div class="card-body">Card 1</div>
+            <div class="card-body">
+              <div class="project-body">
+                <div class="project-image">
+                  <img src="./images/project-1.jpg" alt="project image" />
+                </div>
+                <div class="project-title">Project Name</div>
+                <div class="project-description">
+                <td>
+                  <tr>  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
+                    dolorum repellat delectus nam perspiciatis, iure minus ea at
+                    natus nobis officia dolores earum sapiente corrupti molestias.
+                    Officiis enim quisquam omnis?fficia dolores earum sapiente corrupti molestias.
+                    Officiis enim quisquam omnis?</tr>
+                </td>
+                </div>
+                <div class="project-link">
+                  <a href="#">Read More...</a>
+                </div>
+              </div>
+            </div>
           </div>
+
           <div class="card card-custom">
             <div class="card-body">Card 2</div>
           </div>
