project name heading change to h3

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 <div class="project-image">
                   <img src="./images/project-1.jpg" alt="project image" />
                 </div>
-                <div class="project-title">Project Name</div>
+                <div class="project-title"><h3>Project Name</h3></div>
                 <div class="project-description">
                 <td>
                   <tr>  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
