project card complete

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <div class="more-service-btn"><button>More Services</button></div>
     <!--Projects-->
     <div class="container py-4">
-      <h4 class="mb-3">Project</h4>
+      <h1 class="mb-3">Projects</h1>
       <div class="scroll-container">
         <button class="scroll-button scroll-left" onclick="scrollCards('left')">
           &#8592;
@@ -369,15 +369,18 @@
                 <div class="project-image">
                   <img src="./images/project-1.jpg" alt="project image" />
                 </div>
-                <div class="project-title"><h3>Project Name</h3></div>
+                <div class="project-title"><h3>Project Name 1</h3></div>
                 <div class="project-description">
-                <td>
-                  <tr>  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
-                    dolorum repellat delectus nam perspiciatis, iure minus ea at
-                    natus nobis officia dolores earum sapiente corrupti molestias.
-                    Officiis enim quisquam omnis?fficia dolores earum sapiente corrupti molestias.
-                    Officiis enim quisquam omnis?</tr>
-                </td>
+                  <td>
+                    <tr>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Et dolorum repellat delectus nam perspiciatis, iure minus
+                      ea at natus nobis officia dolores earum sapiente corrupti
+                      molestias. Officiis enim quisquam omnis?fficia dolores
+                      earum sapiente corrupti molestias. Officiis enim quisquam
+                      omnis?
+                    </tr>
+                  </td>
                 </div>
                 <div class="project-link">
                   <a href="#">Read More...</a>
@@ -387,19 +390,129 @@
           </div>
 
           <div class="card card-custom">
-            <div class="card-body">Card 2</div>
+            <div class="card-body">
+              <div class="project-body">
+                <div class="project-image">
+                  <img src="./images/project-1.jpg" alt="project image" />
+                </div>
+                <div class="project-title"><h3>Project Name 2</h3></div>
+                <div class="project-description">
+                  <td>
+                    <tr>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Et dolorum repellat delectus nam perspiciatis, iure minus
+                      ea at natus nobis officia dolores earum sapiente corrupti
+                      molestias. Officiis enim quisquam omnis?fficia dolores
+                      earum sapiente corrupti molestias. Officiis enim quisquam
+                      omnis?
+                    </tr>
+                  </td>
+                </div>
+                <div class="project-link">
+                  <a href="#">Read More...</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="card card-custom">
-            <div class="card-body">Card 3</div>
+            <div class="card-body">
+              <div class="project-body">
+                <div class="project-image">
+                  <img src="./images/project-1.jpg" alt="project image" />
+                </div>
+                <div class="project-title"><h3>Project Name 3</h3></div>
+                <div class="project-description">
+                  <td>
+                    <tr>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Et dolorum repellat delectus nam perspiciatis, iure minus
+                      ea at natus nobis officia dolores earum sapiente corrupti
+                      molestias. Officiis enim quisquam omnis?fficia dolores
+                      earum sapiente corrupti molestias. Officiis enim quisquam
+                      omnis?
+                    </tr>
+                  </td>
+                </div>
+                <div class="project-link">
+                  <a href="#">Read More...</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="card card-custom">
-            <div class="card-body">Card 4</div>
+            <div class="card-body">
+              <div class="project-body">
+                <div class="project-image">
+                  <img src="./images/project-1.jpg" alt="project image" />
+                </div>
+                <div class="project-title"><h3>Project Name 4</h3></div>
+                <div class="project-description">
+                  <td>
+                    <tr>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Et dolorum repellat delectus nam perspiciatis, iure minus
+                      ea at natus nobis officia dolores earum sapiente corrupti
+                      molestias. Officiis enim quisquam omnis?fficia dolores
+                      earum sapiente corrupti molestias. Officiis enim quisquam
+                      omnis?
+                    </tr>
+                  </td>
+                </div>
+                <div class="project-link">
+                  <a href="#">Read More...</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="card card-custom">
-            <div class="card-body">Card 5</div>
+            <div class="card-body">
+              <div class="project-body">
+                <div class="project-image">
+                  <img src="./images/project-1.jpg" alt="project image" />
+                </div>
+                <div class="project-title"><h3>Project Name 5</h3></div>
+                <div class="project-description">
+                  <td>
+                    <tr>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Et dolorum repellat delectus nam perspiciatis, iure minus
+                      ea at natus nobis officia dolores earum sapiente corrupti
+                      molestias. Officiis enim quisquam omnis?fficia dolores
+                      earum sapiente corrupti molestias. Officiis enim quisquam
+                      omnis?
+                    </tr>
+                  </td>
+                </div>
+                <div class="project-link">
+                  <a href="#">Read More...</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="card card-custom">
-            <div class="card-body">Card 6</div>
+            <div class="card-body">
+              <div class="project-body">
+                <div class="project-image">
+                  <img src="./images/project-1.jpg" alt="project image" />
+                </div>
+                <div class="project-title"><h3>Project Name 6</h3></div>
+                <div class="project-description">
+                  <td>
+                    <tr>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Et dolorum repellat delectus nam perspiciatis, iure minus
+                      ea at natus nobis officia dolores earum sapiente corrupti
+                      molestias. Officiis enim quisquam omnis?fficia dolores
+                      earum sapiente corrupti molestias. Officiis enim quisquam
+                      omnis?
+                    </tr>
+                  </td>
+                </div>
+                <div class="project-link">
+                  <a href="#">Read More...</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <button
