logo image added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
   <body>
     <div class="header">
       <div class="header-1">
+        <div class="logo"><img src="./images/katkade-constrction-logo-1.png" class="logo-2">
+          <img src="./images/katkade-constrction-logo-2.png" class="logo-2">
+          </div>
         <img
           src="./images/menus.png"
           id="hamburger-menu"
@@ -45,6 +48,7 @@
           alt="manu-button"
         />
 
+        
         <div class="header-1-info">
           <div>
             <img src="./images/phone-call (1).png" /><strong>7588035979</strong>
