key frame trasitio nchage to ip and down

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="about-info-container">
           <table class="desktop-info-table">
             <tr>
-              <td data-aos="fade-right" class="about-img">
+              <td data-aos="fade-up" class="about-img">
                 <img src="./images/about-us-img-1.jpg" />
               </td>
               <td>
@@ -180,7 +180,7 @@
                 itaque totam quibusdam reprehenderit mollitia alias delectus
                 iste. Aliquid mollitia minus repellat quae facere
               </td>
-              <td class="about-img" data-aos="fade-left" id="about-img-2">
+              <td class="about-img" data-aos="fade-down" id="about-img-2">
                 <img src="./images/about-us-img-1.jpg" />
               </td>
             </tr>
