service card nimation add

--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
       </div>
     </div>
     <div class="incremetnal-info" id="counter-section">
-      <p id="incremetnal-info-experience"></p>
-      <p id="incremetnal-info-projects"></p>
-      <p id="incremetnal-info-services"></p>
+      <p id="incremetnal-info-experience"data-aos="fade-up"></p>
+      <p id="incremetnal-info-projects"data-aos="zoom-in"></p>
+      <p id="incremetnal-info-services"data-aos="fade-down"></p>
     </div>
 
     <!--service-->
@@ -249,7 +249,7 @@
       </div>
       <div class="main-service-card">
         <div class="service-line"></div>
-        <div class="service-card">
+        <div class="service-card" data-aos="fade-down">
           <table>
             <tr>
               <td><img src="./images/building.png" alt="truck image" /></td>
@@ -276,7 +276,7 @@
       </div>
       <div class="main-service-card">
         <div class="service-line"></div>
-        <div class="service-card">
+        <div class="service-card" data-aos="fade-up">
           <table>
             <tr>
               <td><img src="./images/brickwall.png" alt="truck image" /></td>
@@ -303,7 +303,7 @@
       </div>
       <div class="main-service-card">
         <div class="service-line"></div>
-        <div class="service-card">
+        <div class="service-card" data-aos="fade-down">
           <table>
             <tr>
               <td>
@@ -332,7 +332,7 @@
       </div>
       <div class="main-service-card">
         <div class="service-line"></div>
-        <div class="service-card">
+        <div class="service-card" data-aos="fade-up">
           <table>
             <tr>
               <td><img src="./images/settings.png" alt="truck image" /></td>
