animation added to all cards

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="about-info-container">
           <table class="desktop-info-table">
             <tr>
-              <td data-aos="fade-up" class="about-img">
+              <td data-aos="fade-up" data-aos-duration="1000" class="about-img">
                 <img src="./images/about-us-img-1.jpg" />
               </td>
               <td>
@@ -180,7 +180,7 @@
                 itaque totam quibusdam reprehenderit mollitia alias delectus
                 iste. Aliquid mollitia minus repellat quae facere
               </td>
-              <td class="about-img" data-aos="fade-down" id="about-img-2">
+              <td class="about-img" data-aos="fade-down" data-aos-duration="1000" id="about-img-2">
                 <img src="./images/about-us-img-1.jpg" />
               </td>
             </tr>
@@ -228,9 +228,9 @@
       </div>
     </div>
     <div class="incremetnal-info" id="counter-section">
-      <p id="incremetnal-info-experience"data-aos="fade-up"></p>
-      <p id="incremetnal-info-projects"data-aos="zoom-in"></p>
-      <p id="incremetnal-info-services"data-aos="fade-down"></p>
+      <p id="incremetnal-info-experience"data-aos="fade-up" data-aos-duration="1000"></p>
+      <p id="incremetnal-info-projects"data-aos="zoom-in" data-aos-duration="1000"></p>
+      <p id="incremetnal-info-services"data-aos="fade-down" data-aos-duration="1000"></p>
     </div>
 
     <!--service-->
@@ -249,7 +249,7 @@
       </div>
       <div class="main-service-card">
         <div class="service-line"></div>
-        <div class="service-card" data-aos="fade-down">
+        <div class="service-card" data-aos="fade-down"  data-aos-duration="1000">
           <table>
             <tr>
               <td><img src="./images/building.png" alt="truck image" /></td>
@@ -276,7 +276,7 @@
       </div>
       <div class="main-service-card">
         <div class="service-line"></div>
-        <div class="service-card" data-aos="fade-up">
+        <div class="service-card" data-aos="fade-up" data-aos-duration="1000">
           <table>
             <tr>
               <td><img src="./images/brickwall.png" alt="truck image" /></td>
@@ -294,7 +294,7 @@
             </tr>
             <tr>
               <td>
-                <button type="button" class="service-button">Learn More</button>
+                <button type="button" class="service-button" >Learn More</button>
               </td>
             </tr>
           </table>
@@ -303,7 +303,7 @@
       </div>
       <div class="main-service-card">
         <div class="service-line"></div>
-        <div class="service-card" data-aos="fade-down">
+        <div class="service-card" data-aos="fade-down" data-aos-duration="1000">
           <table>
             <tr>
               <td>
@@ -332,7 +332,7 @@
       </div>
       <div class="main-service-card">
         <div class="service-line"></div>
-        <div class="service-card" data-aos="fade-up">
+        <div class="service-card" data-aos="fade-up" data-aos-duration="1000">
           <table>
             <tr>
               <td><img src="./images/settings.png" alt="truck image" /></td>
