sclabilty added to small device in 350px max

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     <div class="about">
       <div class="about-poster">
         <h1 id="aboutUsHeading">About Us</h1>
+        <div class="underline"></div>
         <!--about info for desktop-->
         <div class="about-info-container">
           <table class="desktop-info-table">
