underline stucture created for heading

--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
     <div class="about">
       <div class="about-poster">
         <h1 id="aboutUsHeading">About Us</h1>
-        <div class="underline"></div>
+        <div class="underline">
+          <div class="underline-1"></div>
+        <div class="underline-2"></div>
+        <div class="underline-3"></div>
+        </div>
         <!--about info for desktop-->
         <div class="about-info-container">
           <table class="desktop-info-table">
