service underlinr added

--- a/index.html
+++ b/index.html
@@ -240,6 +240,11 @@
 
     <!--service-->
     <h1 class="service-heading">Services</h1>
+    <div class="underline">
+      <div class="underline-1"></div>
+    <div class="underline-2"></div>
+    <div class="underline-3"></div>
+    </div>
     <div class="service">
       <div class="service-info">
         <h6>
