--- a/index.html
+++ b/index.html
@@ -372,6 +372,11 @@
     <!--Projects-->
     <div class="container py-4">
       <h1 class="mb-3">Projects</h1>
+      <div class="underline">
+        <div class="underline-1"></div>
+      <div class="underline-2"></div>
+      <div class="underline-3"></div>
+      </div>
       <div class="scroll-container">
         <button class="scroll-button scroll-left" onclick="scrollCards('left')">
           &#8592;
