--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
         </button>
       </div>
     </div>
-
-    <div class="projects"></div>
+<div class="morden-construction-poster"></div>
+    <div class="footer"></div>
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
