morden scnstruction heading added

--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
   <body>
     <div class="header">
       <div class="header-1">
-        <div class="logo"><img src="./images/katkade-constrction-logo-1.png" class="logo-2">
-          <img src="./images/katkade-constrction-logo-2.png" class="logo-2">
-          </div>
+        <div class="logo">
+          <img src="./images/katkade-constrction-logo-1.png" class="logo-2" />
+          <img src="./images/katkade-constrction-logo-2.png" class="logo-2" />
+        </div>
         <img
           src="./images/menus.png"
           id="hamburger-menu"
@@ -48,7 +49,6 @@
           alt="manu-button"
         />
 
-        
         <div class="header-1-info">
           <div>
             <img src="./images/phone-call (1).png" /><strong>7588035979</strong>
@@ -147,8 +147,8 @@
         <h1 id="aboutUsHeading">About Us</h1>
         <div class="underline">
           <div class="underline-1"></div>
-        <div class="underline-2"></div>
-        <div class="underline-3"></div>
+          <div class="underline-2"></div>
+          <div class="underline-3"></div>
         </div>
         <!--about info for desktop-->
         <div class="about-info-container">
@@ -185,7 +185,12 @@
                 itaque totam quibusdam reprehenderit mollitia alias delectus
                 iste. Aliquid mollitia minus repellat quae facere
               </td>
-              <td class="about-img" data-aos="fade-down" data-aos-duration="1000" id="about-img-2">
+              <td
+                class="about-img"
+                data-aos="fade-down"
+                data-aos-duration="1000"
+                id="about-img-2"
+              >
                 <img src="./images/about-us-img-1.jpg" />
               </td>
             </tr>
@@ -233,17 +238,29 @@
       </div>
     </div>
     <div class="incremetnal-info" id="counter-section">
-      <p id="incremetnal-info-experience"data-aos="fade-up" data-aos-duration="1000"></p>
-      <p id="incremetnal-info-projects"data-aos="zoom-in" data-aos-duration="1000"></p>
-      <p id="incremetnal-info-services"data-aos="fade-down" data-aos-duration="1000"></p>
+      <p
+        id="incremetnal-info-experience"
+        data-aos="fade-up"
+        data-aos-duration="1000"
+      ></p>
+      <p
+        id="incremetnal-info-projects"
+        data-aos="zoom-in"
+        data-aos-duration="1000"
+      ></p>
+      <p
+        id="incremetnal-info-services"
+        data-aos="fade-down"
+        data-aos-duration="1000"
+      ></p>
     </div>
 
     <!--service-->
     <h1 class="service-heading">Services</h1>
     <div class="underline">
       <div class="underline-1"></div>
-    <div class="underline-2"></div>
-    <div class="underline-3"></div>
+      <div class="underline-2"></div>
+      <div class="underline-3"></div>
     </div>
     <div class="service">
       <div class="service-info">
@@ -259,7 +276,7 @@
       </div>
       <div class="main-service-card">
         <div class="service-line"></div>
-        <div class="service-card" data-aos="fade-down"  data-aos-duration="1000">
+        <div class="service-card" data-aos="fade-down" data-aos-duration="1000">
           <table>
             <tr>
               <td><img src="./images/building.png" alt="truck image" /></td>
@@ -304,7 +321,7 @@
             </tr>
             <tr>
               <td>
-                <button type="button" class="service-button" >Learn More</button>
+                <button type="button" class="service-button">Learn More</button>
               </td>
             </tr>
           </table>
@@ -374,8 +391,8 @@
       <h1 class="mb-3">Projects</h1>
       <div class="underline">
         <div class="underline-1"></div>
-      <div class="underline-2"></div>
-      <div class="underline-3"></div>
+        <div class="underline-2"></div>
+        <div class="underline-3"></div>
       </div>
       <div class="scroll-container">
         <button class="scroll-button scroll-left" onclick="scrollCards('left')">
@@ -542,7 +559,9 @@
         </button>
       </div>
     </div>
-<div class="morden-construction-poster"></div>
+    <div class="morden-construction-poster">
+      <span >We Have</span>MOrden Constrction Service
+    </div>
     <div class="footer"></div>
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
