--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
       </div>
     </div>
     <div class="morden-construction-poster">
-      <span><h1>We Have</h1></span><h3>&nbsp; Morden Constrction Service</h3></div>
+      <span class="quality-heading"><h1>We Have</h1></span><h3 class="quality-heading">&nbsp; Morden Constrction Service</h3></div>
     <div class="footer"></div>
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
