article section structure created

--- a/index.html
+++ b/index.html
@@ -563,6 +563,13 @@
       <span class="quality-heading"><h1 data-aos="fade-right" data-aos-duration="800">We Have</h1></span>
       <h3 class="quality-heading" data-aos="fade-left" data-aos-duration="800">&nbsp; Morden Constrction Service</h3>
     </div>
+    <!--Articals-->
+    <div class="articles">
+      <div class="article-body"></div>
+      <div class="article-body"></div>
+      <div class="article-body"></div>
+      <div class="article-body"></div>
+    </div>
     <div class="footer"></div>
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
