qualiy card animation changed

--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@
       </div>
     </div>
     <div class="morden-construction-poster">
-      <span class="quality-heading"><h1 data-aos="fade-right" data-aos-duration="800">We Have</h1></span>
-      <h3 class="quality-heading" data-aos="fade-left" data-aos-duration="800">&nbsp; Morden Constrction Service</h3>
+      <span class="quality-heading"><h1 data-aos="zoom-in" data-aos-duration="800">We Have</h1></span>
+      <h3 class="quality-heading" data-aos="zoom-in" data-aos-duration="800">&nbsp; Morden Constrction Service</h3>
     </div>
     <!--Articals-->
     <div class="articles">
