cards scalability aded to all screen size

--- a/index.html
+++ b/index.html
@@ -560,15 +560,27 @@
       </div>
     </div>
     <div class="morden-construction-poster">
-      <span class="quality-heading"><h1 data-aos="zoom-in" data-aos-duration="800">We Have</h1></span>
-      <h3 class="quality-heading" data-aos="zoom-in" data-aos-duration="800">&nbsp; Morden Constrction Service</h3>
+      <span class="quality-heading"
+        ><h1 data-aos="zoom-in" data-aos-duration="800">We Have</h1></span
+      >
+      <h3 class="quality-heading" data-aos="zoom-in" data-aos-duration="800">
+        &nbsp; Morden Constrction Service
+      </h3>
     </div>
     <!--Articals-->
     <div class="articles">
-      <div class="article-body"></div>
-      <div class="article-body"></div>
-      <div class="article-body"></div>
-      <div class="article-body"></div>
+      <h1 class="service-heading">Article's</h1>
+    <div class="underline">
+      <div class="underline-1"></div>
+      <div class="underline-2"></div>
+      <div class="underline-3"></div>
+    </div>
+      <div class="article-container">
+        <div class="article-body"></div>
+        <div class="article-body"></div>
+        <div class="article-body"></div>
+        <div class="article-body"></div>
+      </div>
     </div>
     <div class="footer"></div>
     <script src="./js/script.js"></script>
