card inner bosy content added

--- a/index.html
+++ b/index.html
@@ -570,13 +570,32 @@
     <!--Articals-->
     <div class="articles">
       <h1 class="service-heading">Article's</h1>
-    <div class="underline">
-      <div class="underline-1"></div>
-      <div class="underline-2"></div>
-      <div class="underline-3"></div>
-    </div>
+      <div class="underline">
+        <div class="underline-1"></div>
+        <div class="underline-2"></div>
+        <div class="underline-3"></div>
+      </div>
       <div class="article-container">
-        <div class="article-body"></div>
+        <div class="article-body">
+          <div class="article-img">
+            <img src="./images/settings.png" />
+          </div>
+          <div class="article-heading"><h2>Article Name</h2></div>
+          <div class="article-date"></div>
+          <div class="article-info">
+            <table>
+              <td>
+                <tr>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+                  obcaecati error corrupti consequuntur tempora dolor, veniam
+                  dolorum fugiat, eveniet eaque labore. Sed optio sunt assumenda
+                  consectetur ipsa ut error in!
+                </tr>
+              </td>
+            </table>
+          </div>
+          <div class="article-rear-more-btn"><button type="button">Read More</button></div>
+        </div>
         <div class="article-body"></div>
         <div class="article-body"></div>
         <div class="article-body"></div>
