--- a/index.html
+++ b/index.html
@@ -581,7 +581,9 @@
             <img src="./images/settings.png" />
           </div>
           <div class="article-heading"><h2>Article Name</h2></div>
-          <div class="article-date"></div>
+          <div class="article-date">
+            <img src="./images/calendar (1).png" /><strong>18/05/2005</strong>
+          </div>
           <div class="article-info">
             <table>
               <td>
@@ -594,7 +596,7 @@
               </td>
             </table>
           </div>
-          <div class="article-rear-more-btn"><button type="button">Read More</button></div>
+          <div class="more-service-btn"><button>Read More</button></div>
         </div>
         <div class="article-body"></div>
         <div class="article-body"></div>
