other 3 card created

--- a/index.html
+++ b/index.html
@@ -598,10 +598,72 @@
           </div>
           <div class="read-more-article-btn"><button>Read More</button></div>
         </div>
-        <div class="article-body"></div>
-        <div class="article-body"></div>
-        <div class="article-body"></div>
-      </div>
+        <div class="article-body">
+          <div class="article-img">
+            <img src="./images/settings.png" />
+          </div>
+          <div class="article-heading"><h2>Article Name</h2></div>
+          <div class="article-date">
+            <img src="./images/calendar (1).png" /><strong>18/05/2005</strong>
+          </div>
+          <div class="article-info">
+            <table>
+              <td>
+                <tr>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+                  obcaecati error corrupti consequuntur tempora dolor, veniam
+                  dolorum fugiat, eveniet eaque labore. Sed optio sunt assumenda
+                  consectetur ipsa ut error in!
+                </tr>
+              </td>
+            </table>
+          </div>
+          <div class="read-more-article-btn"><button>Read More</button></div>
+        </div>
+        <div class="article-body">
+          <div class="article-img">
+            <img src="./images/settings.png" />
+          </div>
+          <div class="article-heading"><h2>Article Name</h2></div>
+          <div class="article-date">
+            <img src="./images/calendar (1).png" /><strong>18/05/2005</strong>
+          </div>
+          <div class="article-info">
+            <table>
+              <td>
+                <tr>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+                  obcaecati error corrupti consequuntur tempora dolor, veniam
+                  dolorum fugiat, eveniet eaque labore. Sed optio sunt assumenda
+                  consectetur ipsa ut error in!
+                </tr>
+              </td>
+            </table>
+          </div>
+          <div class="read-more-article-btn"><button>Read More</button></div>
+        </div>
+        <div class="article-body">
+          <div class="article-img">
+            <img src="./images/settings.png" />
+          </div>
+          <div class="article-heading"><h2>Article Name</h2></div>
+          <div class="article-date">
+            <img src="./images/calendar (1).png" /><strong>18/05/2005</strong>
+          </div>
+          <div class="article-info">
+            <table>
+              <td>
+                <tr>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+                  obcaecati error corrupti consequuntur tempora dolor, veniam
+                  dolorum fugiat, eveniet eaque labore. Sed optio sunt assumenda
+                  consectetur ipsa ut error in!
+                </tr>
+              </td>
+            </table>
+          </div>
+          <div class="read-more-article-btn"><button>Read More</button></div>
+        </div>
     </div>
     <div class="footer"></div>
     <script src="./js/script.js"></script>
