--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
       <div class="article-container">
         <div class="article-body">
           <div class="article-img">
-            <img src="./images/settings.png" />
+            <img src="./images/construction-1.jpg" />
           </div>
           <div class="article-heading"><h2>Article Name</h2></div>
           <div class="article-date">
@@ -600,7 +600,7 @@
         </div>
         <div class="article-body">
           <div class="article-img">
-            <img src="./images/settings.png" />
+            <img src="./images/construction-1.jpg" />
           </div>
           <div class="article-heading"><h2>Article Name</h2></div>
           <div class="article-date">
@@ -622,7 +622,7 @@
         </div>
         <div class="article-body">
           <div class="article-img">
-            <img src="./images/settings.png" />
+            <img src="./images/construction-1.jpg" />
           </div>
           <div class="article-heading"><h2>Article Name</h2></div>
           <div class="article-date">
@@ -644,7 +644,7 @@
         </div>
         <div class="article-body">
           <div class="article-img">
-            <img src="./images/settings.png" />
+            <img src="./images/construction-1.jpg" />
           </div>
           <div class="article-heading"><h2>Article Name</h2></div>
           <div class="article-date">
