partner section added

--- a/index.html
+++ b/index.html
@@ -264,15 +264,12 @@
     </div>
     <div class="service">
       <div class="service-info">
-        <h6>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iure
-          porro labore, fugiat consequuntur ab, aperiam nesciunt necessitatibus,
-          est harum dolor. Non corrupti vero voluptatibus temporibus quasi. Ex,
-          nam quaerat! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Omnis eligendi consequatur consectetur accusantium, nam error enim est
-          deserunt commodi ducimus, eaque facere, esse corrupti hic? Iste a
-          suscipit excepturi fugiat?
-        </h6>
+        <td>
+          <tr>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati distinctio fuga quas nemo amet quod nulla itaque quam, corrupti, id iure vero eius eum vitae minima? Doloremque dolorum deleniti ipsum.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum alias excepturi quisquam ipsum tenetur! Voluptas, ab! Ipsa quaerat minus nulla mollitia architecto dolorem assumenda non numquam illo, debitis, officiis eum.
+          </tr>
+        </td>
       </div>
       <div class="main-service-card">
         <div class="service-line"></div>
@@ -394,6 +391,14 @@
         <div class="underline-2"></div>
         <div class="underline-3"></div>
       </div>
+    <div class="project-info">
+      <td>
+        <tr>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati distinctio fuga quas nemo amet quod nulla itaque quam, corrupti, id iure vero eius eum vitae minima? Doloremque dolorum deleniti ipsum.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum alias excepturi quisquam ipsum tenetur! Voluptas, ab! Ipsa quaerat minus nulla mollitia architecto dolorem assumenda non numquam illo, debitis, officiis eum.
+        </tr>
+      </td>
+    </div>
       <div class="scroll-container">
         <button class="scroll-button scroll-left" onclick="scrollCards('left')">
           &#8592;
@@ -575,6 +580,14 @@
         <div class="underline-2"></div>
         <div class="underline-3"></div>
       </div>
+      <div class="artical-info">
+        <td>
+          <tr>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati distinctio fuga quas nemo amet quod nulla itaque quam, corrupti, id iure vero eius eum vitae minima? Doloremque dolorum deleniti ipsum.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum alias excepturi quisquam ipsum tenetur! Voluptas, ab! Ipsa quaerat minus nulla mollitia architecto dolorem assumenda non numquam illo, debitis, officiis eum.
+          </tr>
+        </td>
+      </div>
       <div class="article-container">
         <div class="article-body">
           <div class="article-img">
@@ -665,6 +678,8 @@
           <div class="read-more-article-btn"><button>Read More</button></div>
         </div>
     </div>
+    <!--partners-->
+    <div class="partners"></div>
     <div class="footer"></div>
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
