--- a/index.html
+++ b/index.html
@@ -679,7 +679,23 @@
         </div>
     </div>
     <!--partners-->
-    <div class="partners"></div>
+    <div class="image-loop-container">
+      <div class="image-strip">
+        <!-- Repeat images to create smooth loop -->
+        <img src="./images/ultratech.png" alt="1">
+        <img src="./images/ultratech.png" alt="2">
+        <img src="./images/ultratech.png" alt="3">
+        <img src="./images/ultratech.png" alt="4">
+        <img src="./images/ultratech.png" alt="5">
+  
+        <!-- Repeating same set for infinite loop feel -->
+        <img src="./images/ultratech.png" alt="1">
+        <img src="./images/ultratech.png" alt="2">
+        <img src="./images/ultratech.png" alt="3">
+        <img src="./images/ultratech.png" alt="4">
+        <img src="./images/ultratech.png" alt="5">
+      </div>
+    </div>
     <div class="footer"></div>
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
