--- a/index.html
+++ b/index.html
@@ -683,14 +683,14 @@
       <div class="image-strip">
         <!-- Repeat images to create smooth loop -->
         <img src="./images/ultratech.png" alt="1">
-        <img src="./images/ultratech.png" alt="2">
+        <img src="./images/ambuja-cement.png" alt="2">
         <img src="./images/ultratech.png" alt="3">
         <img src="./images/ultratech.png" alt="4">
         <img src="./images/ultratech.png" alt="5">
   
         <!-- Repeating same set for infinite loop feel -->
         <img src="./images/ultratech.png" alt="1">
-        <img src="./images/ultratech.png" alt="2">
+        <img src="./images/ambuja-cement.png" alt="2">
         <img src="./images/ultratech.png" alt="3">
         <img src="./images/ultratech.png" alt="4">
         <img src="./images/ultratech.png" alt="5">
