all logos added to infinite loop

--- a/index.html
+++ b/index.html
@@ -684,16 +684,16 @@
         <!-- Repeat images to create smooth loop -->
         <img src="./images/ultratech.png" alt="1">
         <img src="./images/ambuja-cement.png" alt="2">
-        <img src="./images/ultratech.png" alt="3">
-        <img src="./images/ultratech.png" alt="4">
-        <img src="./images/ultratech.png" alt="5">
+        <img src="./images/jsw.png" alt="3">
+        <img src="./images/philips.png" alt="4">
+        <img src="./images/tata-tiscon.png" alt="5">
   
         <!-- Repeating same set for infinite loop feel -->
         <img src="./images/ultratech.png" alt="1">
         <img src="./images/ambuja-cement.png" alt="2">
-        <img src="./images/ultratech.png" alt="3">
-        <img src="./images/ultratech.png" alt="4">
-        <img src="./images/ultratech.png" alt="5">
+        <img src="./images/jsw.png" alt="3">
+        <img src="./images/philips.png" alt="4">
+        <img src="./images/tata-tiscon.png" alt="5">
       </div>
     </div>
     <div class="footer"></div>
