acc cement logo added

--- a/index.html
+++ b/index.html
@@ -687,6 +687,7 @@
         <img src="./images/jsw.png" alt="3">
         <img src="./images/philips.png" alt="4">
         <img src="./images/tata-tiscon.png" alt="5">
+        <img src="./images/acc.png" alt="6">
   
         <!-- Repeating same set for infinite loop feel -->
         <img src="./images/ultratech.png" alt="1">
@@ -694,6 +695,7 @@
         <img src="./images/jsw.png" alt="3">
         <img src="./images/philips.png" alt="4">
         <img src="./images/tata-tiscon.png" alt="5">
+        <img src="./images/acc.png" alt="6">
       </div>
     </div>
     <div class="footer"></div>
