get in touch section aded

--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
         <img src="./images/acc.png" alt="6">
       </div>
     </div>
-    <div class="footer"></div>
+    <div class="get-in-touch"></div>
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
