--- a/index.html
+++ b/index.html
@@ -698,7 +698,27 @@
         <img src="./images/acc.png" alt="6">
       </div>
     </div>
-    <div class="get-in-touch"></div>
+    <!--get in touch-->
+    <div class="get-in-touch">
+     <div class="contact-heading">
+      <h1>Get In Touch</h1>
+      <div class="underline">
+        <div class="underline-1"></div>
+        <div class="underline-2"></div>
+        <div class="underline-3"></div>
+      </div>
+     </div>
+      <!--form-->
+      <div class="get-in-touch-form">
+        <form>
+          <input type="text" id="name" name="name" placeholder="Full Name" required>
+          <input type="email" id="email" name="name" placeholder="Full Name" required>
+          <input type="tel" id="phone" name="name" placeholder="Full Name" required>
+        </form>
+      </div>
+      </div>
+    <!--footer-->
+    <div class="footer"></div>
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
