scalability added to all screen size for gt in touch section

--- a/index.html
+++ b/index.html
@@ -712,10 +712,12 @@
       <div class="get-in-touch-form">
         <form>
           <input type="text" id="name" name="name" placeholder="Full Name" required>
-          <input type="email" id="email" name="name" placeholder="Full Name" required>
-          <input type="tel" id="phone" name="name" placeholder="Full Name" required>
+          <input type="email" id="email" name="name" placeholder="Email" required>
+          <input type="tel" id="phone" name="name" placeholder="Phone" required>
         </form>
       </div>
+      <textarea id="description" name="message" rows="10" cols="100" placeholder="Decsription..." autocomplete="on" autocorrect="on" 
+      spellcheck="true"></textarea>
       </div>
     <!--footer-->
     <div class="footer"></div>
