button style added

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
       </div>
       <textarea id="description" name="message" rows="10" cols="100" placeholder="Decsription..." autocomplete="on" autocorrect="on" 
       spellcheck="true"></textarea>
-      <button type="button" onclick="sendEmail()">Send</button>
+      <button type="button" onclick="sendEmail()" class="send-btn">Send</button>
       </div>
     <!--footer-->
     <div class="footer"></div>
